--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,16 @@
       "email": "info@superbalist.com"
     }
   ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "/Users/danpetrescu/conceptapps/flysystem-google-cloud-storage"
+    }
+  ],
   "require": {
     "php": ">=5.5.9",
     "illuminate/support": "^5.1|^6.0|^7.0|^8.0",
-    "superbalist/flysystem-google-storage": ">=3.0 <8.0",
+    "superbalist/flysystem-google-storage": "dev-master",
     "illuminate/filesystem": "^5.1|^6.0|^7.0|^8.0",
     "league/flysystem-cached-adapter": "^1.0"
   },
