--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "/Users/danpetrescu/conceptapps/flysystem-google-cloud-storage"
+      "url": "https://github.com/conceptapps/flysystem-google-cloud-storage.git"
     }
   ],
   "require": {
@@ -27,9 +27,6 @@
     }
   },
   "extra": {
-    "branch-alias": {
-      "dev-master": "1.0-dev"
-    },
     "laravel": {
       "providers": [
         "Superbalist\\LaravelGoogleCloudStorage\\GoogleCloudStorageServiceProvider"
